--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "creativeorange/gravatar": "~1.0",
+        "socieboy/alerts": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -32,8 +34,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
